### Release a minor version to support https (HEAD -> main)
>Thu, 11 Jul 2024 23:46:05 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Change the scheme of the OGC URL according to the scheme of the client (tag: 1.3.0, origin/main, origin/HEAD)
>Thu, 11 Jul 2024 23:42:28 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Update version of the sofware
>Tue, 9 Jul 2024 16:38:07 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Upgrade software version (tag: 1.2.0)
>Tue, 9 Jul 2024 16:37:12 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Set an error message for IAU bridge when an error happens as expected by OGC Naming Update Tests Fix code to load project metadata
>Tue, 9 Jul 2024 16:33:43 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Add patch version
>Thu, 4 Jul 2024 16:07:08 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Fix docker compose (tag: 1.1.1)
>Thu, 4 Jul 2024 16:05:41 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### FixDokerfile
>Thu, 27 Jun 2024 04:12:56 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Fix dockerfile
>Thu, 27 Jun 2024 03:58:42 +0200
