@@ -1,4 +1,14 @@
-### Release a minor version to support https (HEAD -> main)
+### Add a middleware to update the schema of the request (HEAD -> main)
+>Fri, 12 Jul 2024 00:03:44 +0200
+
+>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
+
+>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
+
+
+
+
+### Release a minor version to support https (origin/main, origin/HEAD)
 >Thu, 11 Jul 2024 23:46:05 +0200
 
 >Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
@@ -8,7 +18,7 @@
 
 
 
-### Change the scheme of the OGC URL according to the scheme of the client (tag: 1.3.0, origin/main, origin/HEAD)
+### Change the scheme of the OGC URL according to the scheme of the client (tag: 1.3.0)
 >Thu, 11 Jul 2024 23:42:28 +0200
 
 >Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
